[tool.poetry]
name = "puzzle-swap-etl"
version = "0.1.0"
description = "ETL pipeline for Puzzle Swap blockchain data extraction and analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "puzzle_swap_etl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
pydantic-settings = "^2.0"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
aiohttp = "^3.9.0"
aiofiles = "^24.0.0"
click = "^8.1.0"
structlog = "^24.0.0"
rich = "^13.0.0"
typer = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
puzzle-etl = "puzzle_swap_etl.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 